fix imageview invisible in iphone

--- a/grails-app/assets/stylesheets/imageview.css
+++ b/grails-app/assets/stylesheets/imageview.css
@@ -2,10 +2,12 @@
 	position: fixed;
 	top: 0;
 	left: 0;
+    right: 0;
+    bottom: 0;
 	z-index: 799;
 	
-	height: 100%;
-	width: 100%;
+	/*height: 100%;
+	width: 100%;*/
 	
 	background-color: rgba(25, 25, 25, 0.6);
 }
